<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Maranan</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="zero">0</string>
    <string name="app_id">410819782414206</string>
    <string name="failed">Failed to initialize Youtube Player</string>
    <string name="payment_method">Payment</string>
    <string name="one_time">One Time</string>
    <string name="weekly">Weekly</string>
    <string name="load_more">Load More</string>
    <string name="not_available">Not Available</string>
    <string name="success_hebrew">להצלחת\u200e</string>
    <string name="medicine_hebrew">לרפואת\u200e</string>
    <string name="InMemoryof_hebrew">לעילוי נשמת\u200e</string>
    <string name="firstname_hebrew">שם פרטי\u200e</string>
    <string name="ThereIs_hebrew">שם האם\u200e</string>
    <string name="ben_hebrew">בן\u200e</string>
    <string name="bat_hebrew">בת\u200e</string>
    <string name="nameOpt_hebrew">שם משפחה, לא חובה\u200e</string>
    <string name="save_hebrew">הקדש\u200e</string>
    <string name="frost_hebrew">נ\"י\u200e</string>
    <string name="shlit_hebrew">הי\"ו\u200e</string>
    <string name="shlita_hebrew">שליט\"א\u200e</string>
    <string name="tlit_hebrew">תליט\"א\u200e</string>
    <string name="memorial_hebrew">ז\"ל\u200e</string>
    <string name="fourteenth_hebrew">הי\"ד\u200e</string>
    <string name="h_hebrew">ע\"ה\u200e</string>
    <string name="l_hebrew">זצ\"ל\u200e</string>
    <string name="whichLive_hebrew">שתח\ייה\u200e</string>
    <string name="title_dedicated">השיעור מוקדש\u200e</string>
    <string name="signature_hebrew">קראתי את התקנון, ואני מסכים לתנאיו\u200e</string>
    <string name="email_hebrew">הזן את כתובת האימ\ייל שלך\u200e</string>
    <string name="password_hebrew">הזן ססמה - הססמה איתה נרשמת למערכת\u200e</string>
    <string name="lastname_hebrew">שם משפחה\u200e</string>
    <string name="passwordReg_hebrew">ססמה\u200e</string>
    <string name="passwordAgain_hebrew">ססמה שוב\u200e</string>
    <string name="characters_mix">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ ₪-_"\" 'תצמנהבסזףךלחיעכגדשפםןוטארקץ</string>
    <string name="failed_hebrew">נכשל\u200e</string>
    <string name="pending_approval">ממתין לאישור\u200e</string>
    <string name="forbiden_word_message">המערכת זיהתה מילה לא חוקית. תקן ונסה שוב\u200e</string>
    <string name="play_a_row">נגן ברצף</string>
    <string name="one_str">ף</string>
    <string name="two_str">ץ</string>
    <string name="three_str">ם</string>
    <string name="four_str">ך</string>
    <string name="five_str">ן</string>
    <string name="hebrew_lang">עברית</string>
    <string name="laoding_media">טוען מדיה...</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="notification_alert">מרכז ההתראות</string>
    <string name="seeks_mercy_his_friend">המבקש רחמים על חברו...</string>
    <string name="answered_first">הוא נענה תחילה.</string>
    <string name="prayer_dedication_text">הקדשות</string>
    <string name="this_praying_about_it">מתפללים זה על זה</string>
    <string name="alerts_side_hebrew">התראות</string>
    <string name="today_hebrew">היום</string>
    <string name="before_hebrew">לפני</string>
    <string name="day_hebrew">יום</string>
    <string name="days_hebrew">ימים</string>
    <string name="a_week_ago_hebrew">לפני שבוע</string>
    <string name="two_weeks_ago_hebrew">לפני שבועיים</string>
    <string name="three_weeks_ago_hebrew">לפני שלושה שבועות</string>
    <string name="a_month_ago_hebrew">לפני חודש</string>
    <string name="months_hebrew">חודשים</string>
    <string name="a_year_ago_hebrew">לפני שנה</string>
    <string name="select_those_who_prayer">בחר/י בעד מי להתפלל</string>
    <string name="prayer_success">מסירות להצלחה</string>
    <string name="prayer_medicine">מסירות לרפואה</string>
    <string name="study_the_elevation_of_soul">מסירות לעילוי נשמה</string>
    <string name="last_visit">הביקור האחרון</string>
    <string name="you_are_each_other_favourite">אתם במועדפים האחד של השני</string>
    <string name="my_devotion">המסירות שלי</string>
    <string name="your_favorites_list">ברשימת המועדפים שלך</string>
    <string name="added_you_to_fav">הוסיפו אותך למועדפים</string>
    <string name="downloading_pdf">Downloading PDF...</string>
    <string name="news_letter_title">עלוני</string>
    <string name="live">LIVE</string>

</resources>